test/files/neg/t11921.check
t11921.scala:6: error: type mismatch;
 found   : A => B
 required: B => B
      def iterator = coll.iterator.map(f)    // coll is ambiguous
                                       ^
t11921.scala:6: warning: reference to coll is ambiguous;
it is both defined in the enclosing method lazyMap and inherited in the enclosing anonymous class as method coll (defined in trait Iterable)
In Scala 2, symbols inherited from a superclass shadow symbols defined in an outer scope.
Such references are ambiguous in Scala 3. To continue using the inherited symbol, write `this.coll`.
Or use `-Wconf:msg=legacy-binding:s` to silence this warning.
      def iterator = coll.iterator.map(f)    // coll is ambiguous
                     ^
1 warning
1 error
